<resources>
    <string name="app_name">Sallefy</string>
    <string name="track_list">Lista</string>
    <string name="app_id">4F8B3483</string>

    <!-- DEFAULT TRACK -->
    <string name="default_track_title">Título canción</string>
    <string name="default_track_author">Autor/a</string>
    <string name="default_username">Usuario</string>
    <string name="default_usernames">Usuarios</string>
    <string name="default_playlists">Playlists</string>
    <string name="default_songs">Canciones</string>

    <!-- DEFAULT PLAYLIST -->
    <string name="default_playlist_title">Título playlist</string>

    <!-- MENU -->
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Busqueda</string>
    <string name="menu_library">Contenido</string>
    <string name="menu_profile">Perfil</string>

    <!-- ACTION -->
    <string name="action_login">Iniciar sesión</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_advance_list">Mostrat Tracks (avanzado)</string>
    <string name="action_list">Mostrar Tracks</string>
    <string name="create_playlist">Crear Playlist</string>
    <string name="name">Nombre</string>
    <string name="track_name">Nombre Track</string>
    <string name="playlist_name">Nombre Playlist</string>
    <string name="add_track_to_playlist">Añadir una canción a una Playlist</string>
    <string name="add_track">Añadir una canción</string>
    <string name="display_playlist_musics">Consultar canciones</string>


    <!-- INFO STATE -->
    <string name="state_wait">Porfavor espere..</string>
    <string name="state_task_in_progress">Tarea en proceso</string>
    <string name="state_error_connexion">Error de conexión!</string>
    <string name="state_success_title">Éxito</string>
    <string name="state_task_completed">Tarea completada con éxito!</string>
    <string name="state_error_title">Error</string>
    <string name="state_error_default">Algo salió mal!</string>


    <!-- ACTIVITY [ Login ] -->
    <string name="login_username">Nombre usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_yetIdentified">Todavía no estás registrad@ ?</string>
    <string name="login_register_here">Regístrate aquí</string>

    <!-- ACTIVITY [ Search ] -->
    <string name="search">Buscar</string>
    <string name="search_bar">Canción - Playlist - Usuario</string>
    <string name="search_button">BUSCAR</string>
    <string name="search_genre">Género</string>
    <string name="default_genres">Géneros</string>
    <string name="song_check">Canciones</string>
    <string name="playlist_check">Playlists</string>
    <string name="user_check">Usuarios</string>

    <!-- ACTIVITY [ Library ] -->
    <string name="library">Biblioteca</string>
    <string name="playlist_button">Playlist</string>
    <string name="artistas_button">Artistas</string>
    <string name="canciones_button">Canciones</string>
    <string name="add_playlist_button">+ Añadir una playlist</string>
    <string name="add_song_button">+ Subir una canción</string>
    <string name="my_songs">Mis canciones</string>
    <string name="fav_songs">Canciones Favoritas</string>
    <string name="my_playlists">Mis listas</string>
    <string name="fav_playlist">Listas Favoritas</string>
    <string name="follow_users">Usuarios seguidos</string>

    <!-- ACTIVITY [ Playlist Details ] -->
    <string name="playlist_detail">Playlist</string>
    <string name="playlist_author">Author</string>
    <string name="playlist_follow">Seguir</string>
    <string name="playlist_unfollow">Dejar de Seguir</string>
    <string name="playlist_random">Aleatorio</string>

    <!-- ACTIVITY [ Create Song ] -->
    <string name="create_song_titulo">Título</string>
    <string name="create_song_genre">Género</string>
    <string name="create_song_artist">Autor/a</string>
    <string name="create_song_file">Buscar fichero</string>

    <!-- ACTION -->

    <string name="action_accept">Aceptar</string>
    <string name="action_decline">Cancelar</string>
    <string name="action_static_playback">Static URL\nPlayback</string>
    <string name="action_backend_playback">Backend Playback</string>
    <string name="action_network_music">Music Service</string>
    <string name="action_cloudinary">Subir canción</string>

    <!-- ACTIVITY [ User Details ] -->
    <string name="user_name">Username: </string>
    <string name="user_email">Email: </string>
    <string name="user_numPlaylist">Playlist: </string>
    <string name="user_numTracks">Tracks: </string>
    <string name="user_numFollowers">Followers: </string>
    <string name="user_numFollowing">Following: </string>
    <string name="user_none">None</string>
    <string name="top_5_songs">MOSTRAR TOP 5 CANCIONES POR REPRODUCIONES</string>
    <string name="top_5_liked_songs">MOSTRAR TOP 5 CANCIONES POR LIKES</string>
    <string name="top_5_followed_playlists">MOSTRAR TOP 5 PLAYLISTS POR FOLLOWERS</string>

    <!-- ACTIVITY [ Stats ] -->
    <string name="top_played_songs">TOP 5 CANCIONES MAS REPRODUCIDAS</string>
    <string name="top_liked_songs">TOP 5 CANCIONES CON MAS LIKES</string>
    <string name="top_followers_playlists">TOP 5 PLAYLISTS CON MAS FOLLOWERS</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
