<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">


    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/search_multiWaveHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="-20"
        android:scaleX="2"
        android:scaleY="1.7"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorSecondary"
        app:mwhStartColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/search_tracks_recyclerview">


        <ImageView
            android:id="@+id/ivPlaylistPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_playlist_add"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvPlaylistName"
            style="@style/TitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/playlist_detail"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvAuthor"
            style="@style/SubtitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_author"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bFollow"
            style="@style/SubtitlesTheme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_follow"
            android:text="@string/playlist_follow"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bRandom"
            style="@style/SubtitlesTheme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_random_radius"
            android:text="@string/playlist_random"
            android:textAlignment="center"

            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_tracks_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout1"
        tools:layout_editor_absoluteX="15dp">

        <SeekBar
            android:id="@+id/dynamic_seekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorWhite"
            android:progressBackgroundTint="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dynamic_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxWidth="200dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/default_track_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dynamic_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_track_author"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/dynamic_backward_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_skip_previous" />

                <ImageButton
                    android:id="@+id/dynamic_play_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_play" />

                <ImageButton
                    android:id="@+id/dynamic_forward_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_skip_next" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>