<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">


    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/search_multiWaveHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="-20"
        android:scaleX="2"
        android:scaleY="1.7"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorSecondary"
        app:mwhStartColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">


        <ImageView
            android:id="@+id/ivPlaylistPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/ic_playlist_add"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvPlaylistName"
            style="@style/TitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/playlist_detail"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvAuthor"
            style="@style/SubtitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/playlist_author"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bFollow"
            style="@style/SubtitlesTheme"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_follow"
            android:text="@string/playlist_follow"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            >


            <Button
                android:id="@+id/bRandom"
                style="@style/SubtitlesTheme"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/btn_random_radius"
                android:text="@string/playlist_random"
                android:textAlignment="center"
                android:layout_marginStart="30dp"

                />

            <ImageButton
                android:id="@+id/bAddSong"
                style="@style/SubtitlesTheme"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/btn_random_radius"
                android:src="@drawable/ic_add_white"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_tracks_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/colorWhite"
        app:itemTextColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/nav_items" />
</androidx.constraintlayout.widget.ConstraintLayout>